<resources>
    <string name="app_name">Videoteca</string>
    <string name="boton_home">boton_home</string>
    <string name="boton_search">boton_search</string>
    <string name="boton_favs">boton_favs</string>
    <string name="boton_user">boton_user</string>
    <string name="videoteca_movil">Videoteca Móvil</string>
    <string name="accion">Acción</string>
    <string name="comedia">Comedia</string>
    <string name="recomendados_para_ti">Recomendados para ti</string>
    <string name="terror">Terror</string>
    <string name="favoritos">Favoritos</string>
    <string name="nombre_de_la_aplicacion">Videoteca Móvil</string>
    <string name="bienvenido_inicie_sesion_para_comenzar_la_diversion">Bienvenido!!! Inicie sesión para comenzar la diversión</string>
    <string name="email">Email</string>
    <string name="ingrese_aqui_su_email">Ingrese aquí su email</string>
    <string name="password">Contraseña</string>
    <string name="ingrese_aqui_su_contrasenia">Ingrese aquí su contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="si_no_tenes_cuenta">Si no tenés cuenta</string>
    <string name="registrate">Registrate</string>
    <string name="icono_de_la_aplicacion">Ícono de la aplicación</string>
    <string name="nombreUsuario">Nombre de usuario</string>
    <string name="userimage">UserImage</string>
    <string name="ver_datos_personales">Ver datos personales</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="ficha">Ficha técnica</string>
    <string name="titulo">Título</string>
    <string name="director">Director</string>
    <string name="pais">País</string>
    <string name="anio">Año</string>
    <string name="duracion">Duración</string>
    <string name="genero">Género</string>
    <string name="calificacion">Calificación</string>
    <string name="reparto">Reparto</string>
    <string name="sinopsis">Sinópsis</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac ex sit amet lacus tincidunt lacinia sit amet luctus nisi. Fusce nec condimentum nisi. Suspendisse dolor lectus, dignissim sed consequat non, accumsan in felis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Ut vestibulum magna vehicula libero semper tincidunt.</string>
    <string name="cover">Tapa de pelicula</string>
    <string name="search_title">title</string>
    <string name="buscar1">Buscar película por nombre...</string>
    <string name="error_movies">Ups, no se ha encontrado la pelicula</string>
    <string name="portada_de_pelicula">Portada de película</string>
    <string name="titulo_de_la_pelicula">Titulo de la película</string>
    <string name="lista_de_generos">Lista de géneros</string>
    <string name="boton_de_favorito">Botón de favorito</string>
    <string name="nombreDeUsuario">Nombre</string>
    <string name="ingrese_aqui_su_nombre">Ingrese aquí su nombre</string>
    <string name="contrasenia">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="drama">Drama</string>
    <string name="ingresos">Ingresos</string>
    <string name="presupuesto">Presupuesto</string>
    <string name="nombre_de_usuario_no_encontrado">Nombre de usuario no encontrado</string>
    <string name="no_tenes_ningun_favorito_guardado">Ups! No tenés pelis guardadas</string>
    <string name="imagen_de_lista_de_favoritos_vacia">Imagen de lista de favoritos vacía</string>
    <string name="fav_button">Botón de películas marcadas como favoritas</string>
    <string name="account_button">Botón de cuenta de usuario</string>
    <string name="close_button">Botón de cerrar detalles de la película</string>
    <string name="more_movie_info">Ícono de más información sobre la película</string>
    <string name="more_details">Más detalles</string>
    <string name="button_more_movie_info">Botón para ir a más información sobre la película</string>
    <string name="button_to_back">Botón para ir para atrás</string>
    <string name="button_search_movies">Botón para buscar películas</string>
    <string name="button_close_fav_list">Botón de cerrar listado de películas favoritas</string>
    <string name="button_refresh">Botón de refrescar listado de películas favoritas</string>
    <string name="button_see_all_favs">Botón para ver todas las películas favoritas</string>
    <string name="see_all">Ver todas</string>
</resources>