<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F2E81"
    tools:context=".MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtFicha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/ficha"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white">
        </com.google.android.material.textview.MaterialTextView>

        <ImageButton
            android:id="@+id/btnSelectFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="#00000000"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_favorite_border_24"
            android:contentDescription="@string/boton_favs"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="16dp"
            android:background="#979E9F"
            app:layout_constraintTop_toBottomOf="@+id/txtFicha" />

        <ImageView
            android:id="@+id/imgCoverFilm"
            android:layout_width="135dp"
            android:layout_height="206dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:srcCompat="@drawable/coverinferno"
            android:contentDescription="@string/cover"/>

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/titulo"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imgCoverFilm"
            app:layout_constraintTop_toTopOf="@+id/imgCoverFilm" />

        <TextView
            android:id="@+id/txtDirector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/director"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/txtTitulo"
            app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

        <TextView
            android:id="@+id/txtPais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/pais"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/txtDirector"
            app:layout_constraintTop_toBottomOf="@+id/txtDirector" />

        <TextView
            android:id="@+id/txtAnio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/anio"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/txtPais"
            app:layout_constraintTop_toBottomOf="@+id/txtPais" />

        <TextView
            android:id="@+id/txtDuracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/duracion"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/txtAnio"
            app:layout_constraintTop_toBottomOf="@+id/txtAnio" />

        <TextView
            android:id="@+id/txtGenero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/genero"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/txtDuracion"
            app:layout_constraintTop_toBottomOf="@+id/txtDuracion" />

        <TextView
            android:id="@+id/txtCalificacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/calificacion"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/txtGenero"
            app:layout_constraintTop_toBottomOf="@+id/txtGenero" />

        <TextView
            android:id="@+id/txtReparto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/reparto"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/txtCalificacion"
            app:layout_constraintTop_toBottomOf="@+id/txtCalificacion" />

        <TextView
            android:id="@+id/txtSinopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sinopsis"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/imgCoverFilm"
            app:layout_constraintTop_toBottomOf="@+id/imgCoverFilm" />

        <TextView
            android:id="@+id/txtDescripcionSinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/lorem"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSinopsis" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDescripcionSinopsis" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/barContent"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#0C164A"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/boton_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnUser"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_home_24" />

        <ImageButton
            android:id="@+id/btnSearch"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:contentDescription="@string/boton_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnUser"
            app:layout_constraintHorizontal_bias="0.29"
            app:layout_constraintStart_toEndOf="@+id/btnHome"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_search_24" />

        <ImageButton
            android:id="@+id/btnFavourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:contentDescription="@string/boton_favs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnUser"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toEndOf="@+id/btnSearch"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_favorite_border_24" />

        <ImageButton
            android:id="@+id/btnUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/boton_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_person_outline_24" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>