<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:background="@drawable/rounded_edges">

    <androidx.cardview.widget.CardView
        android:id="@+id/moviePosterCardView"
        android:layout_width="130dp"
        android:layout_height="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvMovieTitle"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/imgCoverFilm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cover"
            tools:srcCompat="@tools:sample/avatars"
            android:scaleType="fitXY"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvMovieTitle"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/titulo"
        android:textAppearance="@style/genreStyleText"
        app:layout_constraintTop_toTopOf="@id/ibMovieFav"
        app:layout_constraintStart_toEndOf="@id/moviePosterCardView"
        android:maxLines="2"
        android:ellipsize="end"/>

    <ImageButton
        android:id="@+id/ibMovieFav"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/selector_ic_movie_fav"
        android:backgroundTint="@color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ibClose"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/boton_de_favorito"/>

    <ImageButton
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:id="@+id/ibClose"
        android:src="@drawable/ic_close"
        android:backgroundTint="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/close_button"/>

    <TextView
        android:id="@+id/tvMovieData"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvMovieTitle"
        app:layout_constraintStart_toEndOf="@id/moviePosterCardView"
        android:textAppearance="@style/movieDataStyleText"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:text="@string/lorem"
        android:maxLines="1" />

    <TextView
        android:id="@+id/tvMovieDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/moviePosterCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMovieData"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lorem"
        android:textAppearance="@style/largeTextStyleText"
        android:maxLines="4"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/tvMovieGenres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/moviePosterCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMovieDescription"
        android:text="@string/lorem"
        android:textAppearance="@style/movieDataStyleText"
        android:maxLines="2"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:background="#808080"
        app:layout_constraintTop_toBottomOf="@id/moviePosterCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/ivMoreMovieInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_info"
        app:layout_constraintTop_toTopOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/more_movie_info"/>

    <TextView
        android:id="@+id/tvMoreMovieInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ivMoreMovieInfo"
        app:layout_constraintTop_toTopOf="@id/ivMoreMovieInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/more_details"
        android:textAppearance="@style/largeTextStyleText"
        android:layout_marginStart="8dp"/>

    <ImageButton
        android:id="@+id/ibMoreMovieInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_right"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivMoreMovieInfo"
        android:contentDescription="@string/button_more_movie_info"/>
</androidx.constraintlayout.widget.ConstraintLayout>