<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.user.UserFragment"
    android:padding="10dp"
    android:background="@drawable/rounded_corners"
    android:layout_gravity="bottom">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivUserImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/userimage"
            app:srcCompat="@drawable/ic_user"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/movieTitleStyleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivUserImage"
            android:layout_marginTop="5dp"
            tools:text="@string/nombreUsuario"/>

        <Button
            android:id="@+id/bSignOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cerrar_sesion"
            app:icon="@drawable/ic_sign_off"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="#FF0000"
            app:layout_constraintTop_toBottomOf="@id/tvUserName"
            android:layout_marginTop="10dp"/>

        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/ibClose"
            android:src="@drawable/ic_close"
            android:backgroundTint="@color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/close_button"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>